# croco-web3-utils

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
croco-web3-utils/: __init__.py  abc.py  exceptions.py  types.py
croco_web3_utils/: __init__.py  abc.py  exceptions.py  globals.py  tools.py  types.py  utils.py
croco_web3_utils/contracts/uniswap/v2/: contracts.json
croco_web3_utils/contracts/uniswap/v3/: contracts.json  non_fungible_position_manager.abi  quoter_v2.abi
croco_web3_utils/exchanges/: __init__.py  _uniswap_router.py  _uniswap_router_v2.py  _uniswap_router_v3.py  exchanges.py  uniswap_fork.py
tests/: test_exchanges_v2.py  test_exchanges_v3.py
