[tool.poetry]
name = 'croco_web3_utils'
version = '0.1.0'
description = 'The package containing utilities to develop Web3-based projects'
authors = ['Alexey <abelenkov2006@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/blnkoff/croco-web3-utils'
homepage = 'https://github.com/blnkoff/croco-web3-utils'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Module',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS'
]
packages = [{ include = 'croco_web3_utils' }]

[tool.poetry.dependencies]
python = '^3.11'
evm-wallet = "^1.0.3"
web3 = "^6.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
